--- a/about.html
+++ b/about.html
@@ -21,16 +21,16 @@
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item active">
-              <a class="nav-link font-weight-bold text-light" href="/Gold/home.html">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link font-weight-bold text-light" href="/Gold/goldgym/home.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link font-weight-bold text-light" href="/Gold/about.html">About Us</a>
+              <a class="nav-link font-weight-bold text-light" href="/Gold/goldgym/about.html">About Us</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link font-weight-bold text-light" href="/Gold/joingym.html">Join </a>
+                <a class="nav-link font-weight-bold text-light" href="/Gold/goldgym/joingym.html">Join </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link font-weight-bold text-light" href="/Gold/contact.html">Contact Us</a>
+                <a class="nav-link font-weight-bold text-light" href="/Gold/goldgym/contact.html">Contact Us</a>
               </li>
 
           </ul>
