--- a/about.html
+++ b/about.html
@@ -16,21 +16,21 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <a class="navbar-brand font-weight-bold text-warning" href="/Gold/home.html">Gold </a>
+        <a class="navbar-brand font-weight-bold text-warning" href="/goldgym/home.html">Gold </a>
       
         <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
           <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
             <li class="nav-item active">
-              <a class="nav-link font-weight-bold text-light" href="/Gold/goldgym/home.html">Home <span class="sr-only">(current)</span></a>
+              <a class="nav-link font-weight-bold text-light" href="/goldgym/home.html">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link font-weight-bold text-light" href="/Gold/goldgym/about.html">About Us</a>
+              <a class="nav-link font-weight-bold text-light" href="/goldgym/about.html">About Us</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link font-weight-bold text-light" href="/Gold/goldgym/joingym.html">Join </a>
+                <a class="nav-link font-weight-bold text-light" href="/goldgym/joingym.html">Join </a>
               </li>
               <li class="nav-item">
-                <a class="nav-link font-weight-bold text-light" href="/Gold/goldgym/contact.html">Contact Us</a>
+                <a class="nav-link font-weight-bold text-light" href="/goldgym/contact.html">Contact Us</a>
               </li>
 
           </ul>
